parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     declist -> declist dec
Rule 3     declist -> <empty>
Rule 4     dec -> vardec
Rule 5     dec -> funcdec
Rule 6     type -> INTEGER
Rule 7     type -> FLOAT
Rule 8     type -> BOOLEAN
Rule 9     iddec -> ID
Rule 10    iddec -> ID LSB exp RSB
Rule 11    iddec -> ID ASSIGN exp
Rule 12    idlist -> iddec
Rule 13    idlist -> idlist COMMA iddec
Rule 14    vardec -> idlist COLON type SEMICOLON
Rule 15    funcdec -> FUNCTION ID LRB paramdecs RRB COLON type block
Rule 16    funcdec -> FUNCTION ID LRB paramdecs RRB block
Rule 17    paramdecs -> paramdecslist
Rule 18    paramdecs -> <empty>
Rule 19    paramdecslist -> paramdec
Rule 20    paramdecslist -> paramdecslist COMMA paramdec
Rule 21    paramdec -> ID COLON type
Rule 22    paramdec -> ID LSB RSB COLON type
Rule 23    block -> LCB stmtlist RCB
Rule 24    stmtlist -> stmtlist stmt
Rule 25    stmtlist -> <empty>
Rule 26    case -> WHERE const COLON stmtlist
Rule 27    cases -> cases case
Rule 28    cases -> <empty>
Rule 29    stmt -> RETURN exp SEMICOLON
Rule 30    stmt -> exp SEMICOLON
Rule 31    stmt -> block
Rule 32    stmt -> vardec
Rule 33    stmt -> WHILE LRB exp RRB stmt
Rule 34    stmt -> ON LRB exp RRB LCB cases RCB SEMICOLON
Rule 35    stmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 36    stmt -> FOR LRB ID IN ID RRB stmt
Rule 37    stmt -> IF LRB exp RRB stmt elseiflist
Rule 38    stmt -> IF LRB exp RRB stmt elseiflist ELSE stmt
Rule 39    stmt -> PRINT LRB ID RRB SEMICOLON
Rule 40    elseiflist -> elseiflist ELSEIF LRB exp RRB stmt
Rule 41    elseiflist -> <empty>
Rule 42    exp -> ID ASSIGN exp
Rule 43    exp -> ID LSB exp RSB ASSIGN exp
Rule 44    exp -> exp AND exp
Rule 45    exp -> exp OR exp
Rule 46    exp -> exp SUM exp
Rule 47    exp -> exp SUB exp
Rule 48    exp -> exp DIV exp
Rule 49    exp -> exp MUL exp
Rule 50    exp -> exp MOD exp
Rule 51    exp -> exp GT exp
Rule 52    exp -> exp LT exp
Rule 53    exp -> exp NE exp
Rule 54    exp -> exp EQ exp
Rule 55    exp -> exp LE exp
Rule 56    exp -> exp GE exp
Rule 57    exp -> const
Rule 58    exp -> ID LSB exp RSB
Rule 59    exp -> ID
Rule 60    exp -> ID LRB explist RRB
Rule 61    exp -> LRB exp RRB
Rule 62    exp -> ID LRB RRB
Rule 63    exp -> SUB exp
Rule 64    exp -> NOT exp
Rule 65    const -> INTEGERNUMBER
Rule 66    const -> FLOATNUMBER
Rule 67    const -> TRUE
Rule 68    const -> FALSE
Rule 69    explist -> exp
Rule 70    explist -> explist COMMA exp

Terminals, with rules where they appear

AND                  : 44
ASSIGN               : 11 42 43
BOOLEAN              : 8
COLON                : 14 15 21 22 26
COMMA                : 13 20 70
DIV                  : 48
ELSE                 : 38
ELSEIF               : 40
EQ                   : 54
ERROR                : 
FALSE                : 68
FLOAT                : 7
FLOATNUMBER          : 66
FOR                  : 35 36
FUNCTION             : 15 16
GE                   : 56
GT                   : 51
ID                   : 9 10 11 15 16 21 22 36 36 39 42 43 58 59 60 62
IF                   : 37 38
IN                   : 36
INTEGER              : 6
INTEGERNUMBER        : 65
LCB                  : 23 34
LE                   : 55
LRB                  : 1 15 16 33 34 35 36 37 38 39 40 60 61 62
LSB                  : 10 22 43 58
LT                   : 52
MAIN                 : 1
MOD                  : 50
MUL                  : 49
NE                   : 53
NOT                  : 64
ON                   : 34
OR                   : 45
PRINT                : 39
RCB                  : 23 34
RETURN               : 29
RRB                  : 1 15 16 33 34 35 36 37 38 39 40 60 61 62
RSB                  : 10 22 43 58
SEMICOLON            : 14 29 30 34 35 35 39
SUB                  : 47 63
SUM                  : 46
TRUE                 : 67
WHERE                : 26
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

block                : 1 15 16 31
case                 : 27
cases                : 27 34
const                : 26 57
dec                  : 2
declist              : 1 2
elseiflist           : 37 38 40
exp                  : 10 11 29 30 33 34 35 35 35 37 38 40 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 58 61 63 64 69 70
explist              : 60 70
funcdec              : 5
iddec                : 12 13
idlist               : 13 14
paramdec             : 19 20
paramdecs            : 15 16
paramdecslist        : 17 20
program              : 0
stmt                 : 24 33 35 36 37 38 38 40
stmtlist             : 23 24 26
type                 : 14 15 21 22
vardec               : 4 32

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) declist -> . declist dec
    (3) declist -> .

    MAIN            reduce using rule 3 (declist -> .)
    FUNCTION        reduce using rule 3 (declist -> .)
    ID              reduce using rule 3 (declist -> .)

    program                        shift and go to state 1
    declist                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (2) declist -> declist . dec
    (4) dec -> . vardec
    (5) dec -> . funcdec
    (14) vardec -> . idlist COLON type SEMICOLON
    (15) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (16) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (12) idlist -> . iddec
    (13) idlist -> . idlist COMMA iddec
    (9) iddec -> . ID
    (10) iddec -> . ID LSB exp RSB
    (11) iddec -> . ID ASSIGN exp

    MAIN            shift and go to state 3
    FUNCTION        shift and go to state 8
    ID              shift and go to state 9

    dec                            shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    idlist                         shift and go to state 7
    iddec                          shift and go to state 10

state 3

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 11


state 4

    (2) declist -> declist dec .

    MAIN            reduce using rule 2 (declist -> declist dec .)
    FUNCTION        reduce using rule 2 (declist -> declist dec .)
    ID              reduce using rule 2 (declist -> declist dec .)


state 5

    (4) dec -> vardec .

    MAIN            reduce using rule 4 (dec -> vardec .)
    FUNCTION        reduce using rule 4 (dec -> vardec .)
    ID              reduce using rule 4 (dec -> vardec .)


state 6

    (5) dec -> funcdec .

    MAIN            reduce using rule 5 (dec -> funcdec .)
    FUNCTION        reduce using rule 5 (dec -> funcdec .)
    ID              reduce using rule 5 (dec -> funcdec .)


state 7

    (14) vardec -> idlist . COLON type SEMICOLON
    (13) idlist -> idlist . COMMA iddec

    COLON           shift and go to state 12
    COMMA           shift and go to state 13


state 8

    (15) funcdec -> FUNCTION . ID LRB paramdecs RRB COLON type block
    (16) funcdec -> FUNCTION . ID LRB paramdecs RRB block

    ID              shift and go to state 14


state 9

    (9) iddec -> ID .
    (10) iddec -> ID . LSB exp RSB
    (11) iddec -> ID . ASSIGN exp

    COLON           reduce using rule 9 (iddec -> ID .)
    COMMA           reduce using rule 9 (iddec -> ID .)
    LSB             shift and go to state 15
    ASSIGN          shift and go to state 16


state 10

    (12) idlist -> iddec .

    COLON           reduce using rule 12 (idlist -> iddec .)
    COMMA           reduce using rule 12 (idlist -> iddec .)


state 11

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 17


state 12

    (14) vardec -> idlist COLON . type SEMICOLON
    (6) type -> . INTEGER
    (7) type -> . FLOAT
    (8) type -> . BOOLEAN

    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    BOOLEAN         shift and go to state 21

    type                           shift and go to state 18

state 13

    (13) idlist -> idlist COMMA . iddec
    (9) iddec -> . ID
    (10) iddec -> . ID LSB exp RSB
    (11) iddec -> . ID ASSIGN exp

    ID              shift and go to state 9

    iddec                          shift and go to state 22

state 14

    (15) funcdec -> FUNCTION ID . LRB paramdecs RRB COLON type block
    (16) funcdec -> FUNCTION ID . LRB paramdecs RRB block

    LRB             shift and go to state 23


state 15

    (10) iddec -> ID LSB . exp RSB
    (42) exp -> . ID ASSIGN exp
    (43) exp -> . ID LSB exp RSB ASSIGN exp
    (44) exp -> . exp AND exp
    (45) exp -> . exp OR exp
    (46) exp -> . exp SUM exp
    (47) exp -> . exp SUB exp
    (48) exp -> . exp DIV exp
    (49) exp -> . exp MUL exp
    (50) exp -> . exp MOD exp
    (51) exp -> . exp GT exp
    (52) exp -> . exp LT exp
    (53) exp -> . exp NE exp
    (54) exp -> . exp EQ exp
    (55) exp -> . exp LE exp
    (56) exp -> . exp GE exp
    (57) exp -> . const
    (58) exp -> . ID LSB exp RSB
    (59) exp -> . ID
    (60) exp -> . ID LRB explist RRB
    (61) exp -> . LRB exp RRB
    (62) exp -> . ID LRB RRB
    (63) exp -> . SUB exp
    (64) exp -> . NOT exp
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 24
    LRB             shift and go to state 28
    SUB             shift and go to state 26
    NOT             shift and go to state 29
    INTEGERNUMBER   shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33

    exp                            shift and go to state 25
    const                          shift and go to state 27

state 16

    (11) iddec -> ID ASSIGN . exp
    (42) exp -> . ID ASSIGN exp
    (43) exp -> . ID LSB exp RSB ASSIGN exp
    (44) exp -> . exp AND exp
    (45) exp -> . exp OR exp
    (46) exp -> . exp SUM exp
    (47) exp -> . exp SUB exp
    (48) exp -> . exp DIV exp
    (49) exp -> . exp MUL exp
    (50) exp -> . exp MOD exp
    (51) exp -> . exp GT exp
    (52) exp -> . exp LT exp
    (53) exp -> . exp NE exp
    (54) exp -> . exp EQ exp
    (55) exp -> . exp LE exp
    (56) exp -> . exp GE exp
    (57) exp -> . const
    (58) exp -> . ID LSB exp RSB
    (59) exp -> . ID
    (60) exp -> . ID LRB explist RRB
    (61) exp -> . LRB exp RRB
    (62) exp -> . ID LRB RRB
    (63) exp -> . SUB exp
    (64) exp -> . NOT exp
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 24
    LRB             shift and go to state 28
    SUB             shift and go to state 26
    NOT             shift and go to state 29
    INTEGERNUMBER   shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33

    exp                            shift and go to state 34
    const                          shift and go to state 27

state 17

    (1) program -> declist MAIN LRB RRB . block
    (23) block -> . LCB stmtlist RCB

    LCB             shift and go to state 36

    block                          shift and go to state 35

state 18

    (14) vardec -> idlist COLON type . SEMICOLON

    SEMICOLON       shift and go to state 37


state 19

    (6) type -> INTEGER .

    SEMICOLON       reduce using rule 6 (type -> INTEGER .)
    COMMA           reduce using rule 6 (type -> INTEGER .)
    RRB             reduce using rule 6 (type -> INTEGER .)
    LCB             reduce using rule 6 (type -> INTEGER .)


state 20

    (7) type -> FLOAT .

    SEMICOLON       reduce using rule 7 (type -> FLOAT .)
    COMMA           reduce using rule 7 (type -> FLOAT .)
    RRB             reduce using rule 7 (type -> FLOAT .)
    LCB             reduce using rule 7 (type -> FLOAT .)


state 21

    (8) type -> BOOLEAN .

    SEMICOLON       reduce using rule 8 (type -> BOOLEAN .)
    COMMA           reduce using rule 8 (type -> BOOLEAN .)
    RRB             reduce using rule 8 (type -> BOOLEAN .)
    LCB             reduce using rule 8 (type -> BOOLEAN .)


state 22

    (13) idlist -> idlist COMMA iddec .

    COLON           reduce using rule 13 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 13 (idlist -> idlist COMMA iddec .)


state 23

    (15) funcdec -> FUNCTION ID LRB . paramdecs RRB COLON type block
    (16) funcdec -> FUNCTION ID LRB . paramdecs RRB block
    (17) paramdecs -> . paramdecslist
    (18) paramdecs -> .
    (19) paramdecslist -> . paramdec
    (20) paramdecslist -> . paramdecslist COMMA paramdec
    (21) paramdec -> . ID COLON type
    (22) paramdec -> . ID LSB RSB COLON type

    RRB             reduce using rule 18 (paramdecs -> .)
    ID              shift and go to state 38

    paramdecs                      shift and go to state 39
    paramdecslist                  shift and go to state 40
    paramdec                       shift and go to state 41

state 24

    (42) exp -> ID . ASSIGN exp
    (43) exp -> ID . LSB exp RSB ASSIGN exp
    (58) exp -> ID . LSB exp RSB
    (59) exp -> ID .
    (60) exp -> ID . LRB explist RRB
    (62) exp -> ID . LRB RRB

    ASSIGN          shift and go to state 42
    LSB             shift and go to state 43
    RSB             reduce using rule 59 (exp -> ID .)
    AND             reduce using rule 59 (exp -> ID .)
    OR              reduce using rule 59 (exp -> ID .)
    SUM             reduce using rule 59 (exp -> ID .)
    SUB             reduce using rule 59 (exp -> ID .)
    DIV             reduce using rule 59 (exp -> ID .)
    MUL             reduce using rule 59 (exp -> ID .)
    MOD             reduce using rule 59 (exp -> ID .)
    GT              reduce using rule 59 (exp -> ID .)
    LT              reduce using rule 59 (exp -> ID .)
    NE              reduce using rule 59 (exp -> ID .)
    EQ              reduce using rule 59 (exp -> ID .)
    LE              reduce using rule 59 (exp -> ID .)
    GE              reduce using rule 59 (exp -> ID .)
    COLON           reduce using rule 59 (exp -> ID .)
    COMMA           reduce using rule 59 (exp -> ID .)
    RRB             reduce using rule 59 (exp -> ID .)
    SEMICOLON       reduce using rule 59 (exp -> ID .)
    LRB             shift and go to state 44


state 25

    (10) iddec -> ID LSB exp . RSB
    (44) exp -> exp . AND exp
    (45) exp -> exp . OR exp
    (46) exp -> exp . SUM exp
    (47) exp -> exp . SUB exp
    (48) exp -> exp . DIV exp
    (49) exp -> exp . MUL exp
    (50) exp -> exp . MOD exp
    (51) exp -> exp . GT exp
    (52) exp -> exp . LT exp
    (53) exp -> exp . NE exp
    (54) exp -> exp . EQ exp
    (55) exp -> exp . LE exp
    (56) exp -> exp . GE exp

    RSB             shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    SUM             shift and go to state 48
    SUB             shift and go to state 49
    DIV             shift and go to state 50
    MUL             shift and go to state 51
    MOD             shift and go to state 52
    GT              shift and go to state 53
    LT              shift and go to state 54
    NE              shift and go to state 55
    EQ              shift and go to state 56
    LE              shift and go to state 57
    GE              shift and go to state 58


state 26

    (63) exp -> SUB . exp
    (42) exp -> . ID ASSIGN exp
    (43) exp -> . ID LSB exp RSB ASSIGN exp
    (44) exp -> . exp AND exp
    (45) exp -> . exp OR exp
    (46) exp -> . exp SUM exp
    (47) exp -> . exp SUB exp
    (48) exp -> . exp DIV exp
    (49) exp -> . exp MUL exp
    (50) exp -> . exp MOD exp
    (51) exp -> . exp GT exp
    (52) exp -> . exp LT exp
    (53) exp -> . exp NE exp
    (54) exp -> . exp EQ exp
    (55) exp -> . exp LE exp
    (56) exp -> . exp GE exp
    (57) exp -> . const
    (58) exp -> . ID LSB exp RSB
    (59) exp -> . ID
    (60) exp -> . ID LRB explist RRB
    (61) exp -> . LRB exp RRB
    (62) exp -> . ID LRB RRB
    (63) exp -> . SUB exp
    (64) exp -> . NOT exp
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 24
    LRB             shift and go to state 28
    SUB             shift and go to state 26
    NOT             shift and go to state 29
    INTEGERNUMBER   shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33

    exp                            shift and go to state 59
    const                          shift and go to state 27

state 27

    (57) exp -> const .

    RSB             reduce using rule 57 (exp -> const .)
    AND             reduce using rule 57 (exp -> const .)
    OR              reduce using rule 57 (exp -> const .)
    SUM             reduce using rule 57 (exp -> const .)
    SUB             reduce using rule 57 (exp -> const .)
    DIV             reduce using rule 57 (exp -> const .)
    MUL             reduce using rule 57 (exp -> const .)
    MOD             reduce using rule 57 (exp -> const .)
    GT              reduce using rule 57 (exp -> const .)
    LT              reduce using rule 57 (exp -> const .)
    NE              reduce using rule 57 (exp -> const .)
    EQ              reduce using rule 57 (exp -> const .)
    LE              reduce using rule 57 (exp -> const .)
    GE              reduce using rule 57 (exp -> const .)
    COLON           reduce using rule 57 (exp -> const .)
    COMMA           reduce using rule 57 (exp -> const .)
    RRB             reduce using rule 57 (exp -> const .)
    SEMICOLON       reduce using rule 57 (exp -> const .)


state 28

    (61) exp -> LRB . exp RRB
    (42) exp -> . ID ASSIGN exp
    (43) exp -> . ID LSB exp RSB ASSIGN exp
    (44) exp -> . exp AND exp
    (45) exp -> . exp OR exp
    (46) exp -> . exp SUM exp
    (47) exp -> . exp SUB exp
    (48) exp -> . exp DIV exp
    (49) exp -> . exp MUL exp
    (50) exp -> . exp MOD exp
    (51) exp -> . exp GT exp
    (52) exp -> . exp LT exp
    (53) exp -> . exp NE exp
    (54) exp -> . exp EQ exp
    (55) exp -> . exp LE exp
    (56) exp -> . exp GE exp
    (57) exp -> . const
    (58) exp -> . ID LSB exp RSB
    (59) exp -> . ID
    (60) exp -> . ID LRB explist RRB
    (61) exp -> . LRB exp RRB
    (62) exp -> . ID LRB RRB
    (63) exp -> . SUB exp
    (64) exp -> . NOT exp
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 24
    LRB             shift and go to state 28
    SUB             shift and go to state 26
    NOT             shift and go to state 29
    INTEGERNUMBER   shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33

    exp                            shift and go to state 60
    const                          shift and go to state 27

state 29

    (64) exp -> NOT . exp
    (42) exp -> . ID ASSIGN exp
    (43) exp -> . ID LSB exp RSB ASSIGN exp
    (44) exp -> . exp AND exp
    (45) exp -> . exp OR exp
    (46) exp -> . exp SUM exp
    (47) exp -> . exp SUB exp
    (48) exp -> . exp DIV exp
    (49) exp -> . exp MUL exp
    (50) exp -> . exp MOD exp
    (51) exp -> . exp GT exp
    (52) exp -> . exp LT exp
    (53) exp -> . exp NE exp
    (54) exp -> . exp EQ exp
    (55) exp -> . exp LE exp
    (56) exp -> . exp GE exp
    (57) exp -> . const
    (58) exp -> . ID LSB exp RSB
    (59) exp -> . ID
    (60) exp -> . ID LRB explist RRB
    (61) exp -> . LRB exp RRB
    (62) exp -> . ID LRB RRB
    (63) exp -> . SUB exp
    (64) exp -> . NOT exp
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 24
    LRB             shift and go to state 28
    SUB             shift and go to state 26
    NOT             shift and go to state 29
    INTEGERNUMBER   shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33

    exp                            shift and go to state 61
    const                          shift and go to state 27

state 30

    (65) const -> INTEGERNUMBER .

    RSB             reduce using rule 65 (const -> INTEGERNUMBER .)
    AND             reduce using rule 65 (const -> INTEGERNUMBER .)
    OR              reduce using rule 65 (const -> INTEGERNUMBER .)
    SUM             reduce using rule 65 (const -> INTEGERNUMBER .)
    SUB             reduce using rule 65 (const -> INTEGERNUMBER .)
    DIV             reduce using rule 65 (const -> INTEGERNUMBER .)
    MUL             reduce using rule 65 (const -> INTEGERNUMBER .)
    MOD             reduce using rule 65 (const -> INTEGERNUMBER .)
    GT              reduce using rule 65 (const -> INTEGERNUMBER .)
    LT              reduce using rule 65 (const -> INTEGERNUMBER .)
    NE              reduce using rule 65 (const -> INTEGERNUMBER .)
    EQ              reduce using rule 65 (const -> INTEGERNUMBER .)
    LE              reduce using rule 65 (const -> INTEGERNUMBER .)
    GE              reduce using rule 65 (const -> INTEGERNUMBER .)
    COLON           reduce using rule 65 (const -> INTEGERNUMBER .)
    COMMA           reduce using rule 65 (const -> INTEGERNUMBER .)
    RRB             reduce using rule 65 (const -> INTEGERNUMBER .)
    SEMICOLON       reduce using rule 65 (const -> INTEGERNUMBER .)


state 31

    (66) const -> FLOATNUMBER .

    RSB             reduce using rule 66 (const -> FLOATNUMBER .)
    AND             reduce using rule 66 (const -> FLOATNUMBER .)
    OR              reduce using rule 66 (const -> FLOATNUMBER .)
    SUM             reduce using rule 66 (const -> FLOATNUMBER .)
    SUB             reduce using rule 66 (const -> FLOATNUMBER .)
    DIV             reduce using rule 66 (const -> FLOATNUMBER .)
    MUL             reduce using rule 66 (const -> FLOATNUMBER .)
    MOD             reduce using rule 66 (const -> FLOATNUMBER .)
    GT              reduce using rule 66 (const -> FLOATNUMBER .)
    LT              reduce using rule 66 (const -> FLOATNUMBER .)
    NE              reduce using rule 66 (const -> FLOATNUMBER .)
    EQ              reduce using rule 66 (const -> FLOATNUMBER .)
    LE              reduce using rule 66 (const -> FLOATNUMBER .)
    GE              reduce using rule 66 (const -> FLOATNUMBER .)
    COLON           reduce using rule 66 (const -> FLOATNUMBER .)
    COMMA           reduce using rule 66 (const -> FLOATNUMBER .)
    RRB             reduce using rule 66 (const -> FLOATNUMBER .)
    SEMICOLON       reduce using rule 66 (const -> FLOATNUMBER .)


state 32

    (67) const -> TRUE .

    RSB             reduce using rule 67 (const -> TRUE .)
    AND             reduce using rule 67 (const -> TRUE .)
    OR              reduce using rule 67 (const -> TRUE .)
    SUM             reduce using rule 67 (const -> TRUE .)
    SUB             reduce using rule 67 (const -> TRUE .)
    DIV             reduce using rule 67 (const -> TRUE .)
    MUL             reduce using rule 67 (const -> TRUE .)
    MOD             reduce using rule 67 (const -> TRUE .)
    GT              reduce using rule 67 (const -> TRUE .)
    LT              reduce using rule 67 (const -> TRUE .)
    NE              reduce using rule 67 (const -> TRUE .)
    EQ              reduce using rule 67 (const -> TRUE .)
    LE              reduce using rule 67 (const -> TRUE .)
    GE              reduce using rule 67 (const -> TRUE .)
    COLON           reduce using rule 67 (const -> TRUE .)
    COMMA           reduce using rule 67 (const -> TRUE .)
    RRB             reduce using rule 67 (const -> TRUE .)
    SEMICOLON       reduce using rule 67 (const -> TRUE .)


state 33

    (68) const -> FALSE .

    RSB             reduce using rule 68 (const -> FALSE .)
    AND             reduce using rule 68 (const -> FALSE .)
    OR              reduce using rule 68 (const -> FALSE .)
    SUM             reduce using rule 68 (const -> FALSE .)
    SUB             reduce using rule 68 (const -> FALSE .)
    DIV             reduce using rule 68 (const -> FALSE .)
    MUL             reduce using rule 68 (const -> FALSE .)
    MOD             reduce using rule 68 (const -> FALSE .)
    GT              reduce using rule 68 (const -> FALSE .)
    LT              reduce using rule 68 (const -> FALSE .)
    NE              reduce using rule 68 (const -> FALSE .)
    EQ              reduce using rule 68 (const -> FALSE .)
    LE              reduce using rule 68 (const -> FALSE .)
    GE              reduce using rule 68 (const -> FALSE .)
    COLON           reduce using rule 68 (const -> FALSE .)
    COMMA           reduce using rule 68 (const -> FALSE .)
    RRB             reduce using rule 68 (const -> FALSE .)
    SEMICOLON       reduce using rule 68 (const -> FALSE .)


state 34

    (11) iddec -> ID ASSIGN exp .
    (44) exp -> exp . AND exp
    (45) exp -> exp . OR exp
    (46) exp -> exp . SUM exp
    (47) exp -> exp . SUB exp
    (48) exp -> exp . DIV exp
    (49) exp -> exp . MUL exp
    (50) exp -> exp . MOD exp
    (51) exp -> exp . GT exp
    (52) exp -> exp . LT exp
    (53) exp -> exp . NE exp
    (54) exp -> exp . EQ exp
    (55) exp -> exp . LE exp
    (56) exp -> exp . GE exp

    COLON           reduce using rule 11 (iddec -> ID ASSIGN exp .)
    COMMA           reduce using rule 11 (iddec -> ID ASSIGN exp .)
    AND             shift and go to state 46
    OR              shift and go to state 47
    SUM             shift and go to state 48
    SUB             shift and go to state 49
    DIV             shift and go to state 50
    MUL             shift and go to state 51
    MOD             shift and go to state 52
    GT              shift and go to state 53
    LT              shift and go to state 54
    NE              shift and go to state 55
    EQ              shift and go to state 56
    LE              shift and go to state 57
    GE              shift and go to state 58


state 35

    (1) program -> declist MAIN LRB RRB block .

    $end            reduce using rule 1 (program -> declist MAIN LRB RRB block .)


state 36

    (23) block -> LCB . stmtlist RCB
    (24) stmtlist -> . stmtlist stmt
    (25) stmtlist -> .

    RCB             reduce using rule 25 (stmtlist -> .)
    RETURN          reduce using rule 25 (stmtlist -> .)
    WHILE           reduce using rule 25 (stmtlist -> .)
    ON              reduce using rule 25 (stmtlist -> .)
    FOR             reduce using rule 25 (stmtlist -> .)
    IF              reduce using rule 25 (stmtlist -> .)
    PRINT           reduce using rule 25 (stmtlist -> .)
    ID              reduce using rule 25 (stmtlist -> .)
    LRB             reduce using rule 25 (stmtlist -> .)
    SUB             reduce using rule 25 (stmtlist -> .)
    NOT             reduce using rule 25 (stmtlist -> .)
    LCB             reduce using rule 25 (stmtlist -> .)
    INTEGERNUMBER   reduce using rule 25 (stmtlist -> .)
    FLOATNUMBER     reduce using rule 25 (stmtlist -> .)
    TRUE            reduce using rule 25 (stmtlist -> .)
    FALSE           reduce using rule 25 (stmtlist -> .)

    stmtlist                       shift and go to state 62

state 37

    (14) vardec -> idlist COLON type SEMICOLON .

    MAIN            reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    FUNCTION        reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    ID              reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    RCB             reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    RETURN          reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    WHILE           reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    ON              reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    FOR             reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    IF              reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    PRINT           reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    LRB             reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    SUB             reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    NOT             reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    LCB             reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    INTEGERNUMBER   reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    FLOATNUMBER     reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    TRUE            reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    FALSE           reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    ELSE            reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    ELSEIF          reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)
    WHERE           reduce using rule 14 (vardec -> idlist COLON type SEMICOLON .)


state 38

    (21) paramdec -> ID . COLON type
    (22) paramdec -> ID . LSB RSB COLON type

    COLON           shift and go to state 63
    LSB             shift and go to state 64


state 39

    (15) funcdec -> FUNCTION ID LRB paramdecs . RRB COLON type block
    (16) funcdec -> FUNCTION ID LRB paramdecs . RRB block

    RRB             shift and go to state 65


state 40

    (17) paramdecs -> paramdecslist .
    (20) paramdecslist -> paramdecslist . COMMA paramdec

    RRB             reduce using rule 17 (paramdecs -> paramdecslist .)
    COMMA           shift and go to state 66


state 41

    (19) paramdecslist -> paramdec .

    COMMA           reduce using rule 19 (paramdecslist -> paramdec .)
    RRB             reduce using rule 19 (paramdecslist -> paramdec .)


state 42

    (42) exp -> ID ASSIGN . exp
    (42) exp -> . ID ASSIGN exp
    (43) exp -> . ID LSB exp RSB ASSIGN exp
    (44) exp -> . exp AND exp
    (45) exp -> . exp OR exp
    (46) exp -> . exp SUM exp
    (47) exp -> . exp SUB exp
    (48) exp -> . exp DIV exp
    (49) exp -> . exp MUL exp
    (50) exp -> . exp MOD exp
    (51) exp -> . exp GT exp
    (52) exp -> . exp LT exp
    (53) exp -> . exp NE exp
    (54) exp -> . exp EQ exp
    (55) exp -> . exp LE exp
    (56) exp -> . exp GE exp
    (57) exp -> . const
    (58) exp -> . ID LSB exp RSB
    (59) exp -> . ID
    (60) exp -> . ID LRB explist RRB
    (61) exp -> . LRB exp RRB
    (62) exp -> . ID LRB RRB
    (63) exp -> . SUB exp
    (64) exp -> . NOT exp
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 24
    LRB             shift and go to state 28
    SUB             shift and go to state 26
    NOT             shift and go to state 29
    INTEGERNUMBER   shift and go to state 30
    FLOATNUMBER     shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33

    exp                            shift and go to state 67
    const                          shift and go to state 27

state 43
